--- a/feature-bookstore-list/src/main/res/layout/activity_booklist.xml
+++ b/feature-bookstore-list/src/main/res/layout/activity_booklist.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/icon_fab"
+        android:contentDescription="@string/fab_icon"
         android:src="@drawable/ic_heart_fill"
         android:backgroundTint="#FFFFFF"
         android:theme="@style/Theme.AppCompat"/>
